--- a/Frontend/my-app/src/Components/FirstPage.css
+++ b/Frontend/my-app/src/Components/FirstPage.css
@@ -133,3 +133,59 @@ blockquote p::after {
     color: white;
    
 }
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+  
+  .popup-content {
+    background-color: #ffff;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 50%;
+    width: 100%;
+    max-height: 90vh;
+    overflow-y: auto;
+    backdrop-filter: blur(0px);
+  }
+
+  .popup-scrollable {
+    max-height: 100%;
+  }
+
+  .popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .close-button {
+    background: none;
+    border: none;
+    color: #888;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .close-button:hover {
+    color: #333;
+  }
+  
+  .popup-content {
+    position: relative;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+  }
+  
