--- a/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
+++ b/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 8px;
     overflow-x: hidden;
-      
+    width:100%; 
 }
 #docsideimg{
     padding-top: 1%;
@@ -66,7 +66,6 @@
     display: flex;
     flex-direction: row;
     height: auto;
-    width: auto;
     background-color: #fcf6f6;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
     z-index: 1;
