Completed Admin Flow

--- a/Frontend/my-app/src/Components/Form/DoctorForm.css
+++ b/Frontend/my-app/src/Components/Form/DoctorForm.css
@@ -1,23 +1,27 @@
 .form-container {
-    width: 400px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    padding: 0; 
+    margin: 0; 
+    background-color: transparent;
   }
   
-  .lab-form label {
+  .doctor-form {
+    background-color: transparent; 
+    border: none; 
+    border-radius: 0; 
+  }
+  
+  .doctor-form label {
     display: block;
     margin-bottom: 8px;
   }
   
-  .lab-form input {
+  .doctor-form input {
     width: calc(100% - 16px);
     padding: 8px;
     margin-bottom: 10px;
   }
   
-  .lab-form button {
+  .doctor-form button {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
@@ -26,7 +30,7 @@
     cursor: pointer;
   }
   
-  .lab-form button:hover {
+  .doctor-form button:hover {
     background-color: #0056b3;
   }
   
@@ -35,8 +39,18 @@
     margin-bottom: 20px;
     font-size: 1.5rem;
   }
+  
+  .close-button-doctor {
+    position: relative;
+    top: 5px;
+    background-color: #b4b2b2;
+    color:black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
 
-  .form-container-lab {
+  .form-container-doctor {
     width: 500px;
     background-color: #fff;
     margin: 20px auto;
@@ -45,7 +59,7 @@
     border-radius: 5px;
   }
 
-  .container-lab{
+  .container-doctor{
     width: 400px;
     background-color: #fff;
     margin: 20px auto;
@@ -55,17 +69,3 @@
     height: 500px;
     overflow-y: scroll;
   }
-
-  .close-button-lab {
-    position: relative;
-    top: 5px; 
-    right:-480px;
-    background-color: #b4b2b2;
-    color:black;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    cursor: pointer;
-  }
-  
-  
