--- a/Frontend/my-app/src/Components/Form/LabForm.css
+++ b/Frontend/my-app/src/Components/Form/LabForm.css
@@ -1,27 +1,23 @@
 .form-container {
-    padding: 0; 
-    margin: 0; 
-    background-color: transparent;
+    width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
   }
   
-  .doctor-form {
-    background-color: transparent; 
-    border: none; 
-    border-radius: 0; 
-  }
-  
-  .doctor-form label {
+  .lab-form label {
     display: block;
     margin-bottom: 8px;
   }
   
-  .doctor-form input {
+  .lab-form input {
     width: calc(100% - 16px);
     padding: 8px;
     margin-bottom: 10px;
   }
   
-  .doctor-form button {
+  .lab-form button {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
@@ -30,7 +26,7 @@
     cursor: pointer;
   }
   
-  .doctor-form button:hover {
+  .lab-form button:hover {
     background-color: #0056b3;
   }
   
@@ -39,20 +35,8 @@
     margin-bottom: 20px;
     font-size: 1.5rem;
   }
-  
-  .close-button-doctor {
-    position: relative;
-    top: 5px; 
-    right:-480px;
-    background-color: #b4b2b2;
-    color:black;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    cursor: pointer;
-  }
 
-  .form-container-doctor {
+  .form-container-lab {
     width: 500px;
     background-color: #fff;
     margin: 20px auto;
@@ -61,7 +45,7 @@
     border-radius: 5px;
   }
 
-  .container-doctor{
+  .container-lab{
     width: 400px;
     background-color: #fff;
     margin: 20px auto;
@@ -71,3 +55,15 @@
     height: 500px;
     overflow-y: scroll;
   }
+
+  .close-button-lab {
+    position: relative;
+    top: 5px;
+    background-color: #b4b2b2;
+    color:black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  
