Updating Login UI

--- a/Frontend/my-app/src/Components/Radiologist/Login/Radio.css
+++ b/Frontend/my-app/src/Components/Radiologist/Login/Radio.css
@@ -3,12 +3,12 @@
     display: flex;
     background-color: rgb(14, 14, 98);
 }
-.divisions1
+.divisions1R
 {
     display: flex;
+    flex: 1;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    padding-left: 10%;
 }  
   
 #radseideimg{
@@ -19,18 +19,16 @@
 }
   
   
-.pageTitle {
+.pageTitleR {
     color: white;
-    margin-left: 255px;
-    margin-top: 35px;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /* ------------------------------------------------------ */
 
 .Radio-Login-Ver{
     display: flex;
-    background-color: #ffff00;
-    height: 580px;
 }
   
 .Radio-Login-Ver-Left{
@@ -52,14 +50,13 @@
   
 .login-container {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    width: auto;
     justify-content: center;
     align-self: center;
     text-align: center;
-    margin-bottom: 20%;
     
 }
   
@@ -69,15 +66,15 @@
     padding-bottom: 30%;
 }
   
-.login-form {
+.login-formR {
     display: flex;
     flex-direction: column;
-    padding-bottom: 0%;
+    padding: 10px;
 }
   
 .form-group {
-    position: relative;
-    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
 }
   
 .form-group label {
@@ -90,7 +87,7 @@
 }
   
 .form-group input {
-    width: 100%;
+    width: 300px;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #cccccc;
@@ -114,22 +111,15 @@
 }
 #radiomainimg{
     padding-left: 10%;
-    
 }
 
-.input-icon {
-    position: absolute;
-    transform: translateX(-40%);
-    transform: translateY(30%);
-    left: 10px; 
+.input-iconR {
     width: 20px; 
     height:20px;
+    transform: translateX(30px);
 }
 
 #faeye{
-    position: absolute;
-    transform: translateX(-50%);
-    transform: translateY(30%);
     right: 10px; 
     width: 20px; 
     height:30px;
