--- a/Frontend/my-app/src/Components/Doctor/Login/Doctor.css
+++ b/Frontend/my-app/src/Components/Doctor/Login/Doctor.css
@@ -5,27 +5,25 @@
     background-color: rgb(7, 110, 101);
 }
 
-.divisions1
+.divisions1D
 {
     display: flex;
+    flex: 1;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    padding-left: 10%;
 }
   
 #radseideimg{
-    padding-top: 1%;
-    padding-left: 10%;
+    padding: 10%;
     height: 120px;
     width: 120px;
-    cursor: pointer;
 }
   
   
-.pageTitle {
+.pageTitleD {
     color: rgb(252, 252, 252);
-    margin-left: 255px;
-    margin-top: 35px;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /* ------------------------------------------------------ */
@@ -34,8 +32,6 @@
 
 .Doctor-Login-Ver{
     display: flex;
-    background-color: #ffff00;
-    height: 580px;
 }
   
 .Doctor-Login-Ver-Left{
@@ -57,14 +53,13 @@
   
 .login-container {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    width: auto;
     justify-content: center;
     align-self: center;
     text-align: center;
-    margin-bottom: 20%;
     
 }
   
@@ -74,15 +69,15 @@
     padding-bottom: 30%;
 }
   
-.login-form {
+.login-formD {
     display: flex;
     flex-direction: column;
-    padding-bottom: 0%;
+    padding: 10px;
 }
   
 .form-group {
-    position: relative;
-    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
 }
   
 .form-group label {
@@ -90,12 +85,12 @@
     color: black;
     margin-bottom: 5px;
     justify-content: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 30%;
 }
   
 .form-group input {
-    width: 100%;
+    width: 300px;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #cccccc;
@@ -119,22 +114,17 @@
 }
 #doctormainimg{
     padding-left: 10%;
-    height: 550px;
+    height: auto;
     width:100%;
 }
 
 .input-icon {
-    position: absolute;
-    transform: translateX(-40%);
-    transform: translateY(30%);
-    left: 10px; /* Adjust this value as needed */
-    width: 20px; /* Adjust this value as needed */
+    width: 20px; 
     height:20px;
+    transform: translateX(30px);
+    margin-bottom: 10px;
 }
 #faeye{
-    position: absolute;
-    transform: translateX(-50%);
-    transform: translateY(30%);
     right: 10px; 
     width: 20px; 
     height:30px;
