--- a/Frontend/my-app/src/Components/Lab/Login/Lab.css
+++ b/Frontend/my-app/src/Components/Lab/Login/Lab.css
@@ -2,36 +2,29 @@
     display: flex;
     background-color: rgb(244, 165, 46);
 }
-.divisions1
+.divisions1L
 {
     display: flex;
+    flex: 1;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    padding-left: 10%;
 }  
   
 #labseideimg{
-    padding-top: 1%;
-    padding-left: 10%;
+    padding: 10%;
     height: 120px;
     width: 120px;
 }
   
   
-.pageTitle {
-    color: rgb(252, 252, 252);
-    margin-left: 200px;
-    margin-top: 35px;
+.pageTitleL {
+    color: white;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-/* ------------------------------------------------------ */
-
-
 
 .Lab-Login-Ver{
     display: flex;
-    background-color: #ffff00;
-    height: 580px;
 }
   
 .Lab-Login-Ver-Left{
@@ -70,10 +63,10 @@
     padding-bottom: 30%;
 }
   
-.login-form {
+.login-formL {
     display: flex;
     flex-direction: column;
-    padding-bottom: 0%;
+    padding: 10px;
 }
   
 .form-group {
