--- a/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
+++ b/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
@@ -35,7 +35,7 @@
 {
    margin-left: 250px;
    margin-top: 20px;
-   
+   cursor: pointer;
 }
 
 /* ------------------------------------------------------ */
