--- a/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
+++ b/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
@@ -89,7 +89,7 @@
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
-    box-shadow: inset 0 0 0 2px #1588C2;
+    box-shadow: inset 0 0 0 2px black;
   }
  
   .Patient-landing-about-us-section { 
