--- a/Frontend/my-app/src/Components/Doctor/Chat/DoctorChat.css
+++ b/Frontend/my-app/src/Components/Doctor/Chat/DoctorChat.css
@@ -23,8 +23,25 @@
 .dicom-viewer{
     margin-right: 80px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
-
+.screenshot
+{
+    margin-top: 10%;
+    margin-left: 40%;
+    margin-right: 40%;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #066E65;
+    height: 40px;
+}
 .DoctorSearch {
     height: 30px;
     width: 100vh;
