GetPatientList and GetLabList api integration

--- a/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
+++ b/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
@@ -37,6 +37,7 @@
 {
    margin-left: 250px;
    margin-top: 20px;
+   margin-right: 15px;
 }
 
 /* ------------------------------------------------------ */
