--- a/Frontend/my-app/src/Components/Doctor/Chat/DoctorChat.css
+++ b/Frontend/my-app/src/Components/Doctor/Chat/DoctorChat.css
@@ -161,9 +161,13 @@
     /* Color of the scrollbar track */
 }
 
-
-/* .send-upload{
-    border: 4px solid black;
-    border-radius: 0 0 1 1;
-    max-width: 450px;
-} */
+.DoctorChat-about-us-section { 
+    margin-top: 20px;
+    height: auto;
+    padding: 5px;
+    background-color: rgb(7,110,101);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: white;
+    font-weight: bold;
+  }
