--- a/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
+++ b/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
@@ -105,3 +105,9 @@
   .LinkStyle {
     text-decoration: none;
   }
+
+  .buttonsToUse {
+    margin-right: 35%;
+    margin-left: 35%;
+    margin-bottom: 10px;
+  }
