--- a/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
+++ b/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
@@ -7,9 +7,11 @@
 
 #docdetsideimg{
     flex: 1;
-    padding: 8%;
+    padding: 10%;
     height: 80px;
     width: 80px;
+    margin-left: 15px;
+    
 }
 .DocDetLogout
 {
@@ -46,7 +48,7 @@
     margin-bottom: 2px;
     display: flex;
     flex-direction: column;
-    color: white;
+    color: rgb(7,110,101);
     
 }
 
@@ -63,7 +65,7 @@
 }
 .Doc-Det-ver1 p{
     font-size: small;
-    background-color: rgb(7,110,101);
+    background-color: white;
     justify-self: center;
     padding: 4px;
     margin: 5%;
@@ -72,7 +74,7 @@
     text-align: center;
     border-style: solid;
     border-radius: 5px;
-    border: rgb(7,110,101) solid 6px;
+    border: black dotted 1px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .Doc-Det-ver2-inner{
@@ -109,9 +111,10 @@
 .card-sub {
     cursor: pointer;
     border: none;
-    -webkit-box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
-    box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
-    width: 500px;
+    -webkit-box-shadow: 0 0 1px 2px rgba(27, 26, 26, 0.05), 0 -2px 1px -2px rgba(22, 21, 21, 0.04), 0 0 0 -1px rgba(32, 31, 31, 0.05);
+    box-shadow: 0 0 1px 2px rgba(31, 31, 31, 0.05), 0 -2px 1px -2px rgba(32, 32, 32, 0.04), 0 0 0 -1px rgba(22, 22, 22, 0.05);
+    width: auto;
+    padding: auto;
 }
 .GenerateReport{
     border-radius: 5px;
