--- a/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
+++ b/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
@@ -83,21 +83,20 @@
     flex:2;
     height: auto;
     padding-right: 1%;
+    background-color: transparent;
 }
 
 
 .card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 20px 0 rgba(69,90,100,0.08);
-    box-shadow: 0 1px 20px 0 rgba(69,90,100,0.08);
     border: none;
     margin-bottom: 10px;
     overflow-x: hidden;
-    
+    background-color: transparent;
+    box-shadow: none;
 }
 .card-block {
     padding: 4px;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 .card-title{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -113,9 +112,10 @@
     cursor: pointer;
     border: none;
     -webkit-box-shadow: 0 0 1px 2px rgba(27, 26, 26, 0.05), 0 -2px 1px -2px rgba(22, 21, 21, 0.04), 0 0 0 -1px rgba(32, 31, 31, 0.05);
-    box-shadow: 0 0 1px 2px rgba(31, 31, 31, 0.05), 0 -2px 1px -2px rgba(32, 32, 32, 0.04), 0 0 0 -1px rgba(22, 22, 22, 0.05);
+    box-shadow: 5px 5px 5px 5px rgba(31, 31, 31, 0.05), 0 -2px 1px -2px rgba(32, 32, 32, 0.04), 0 0 0 -1px rgba(22, 22, 22, 0.05);
     width: auto;
     padding: auto;
+    border-radius: 5px;
 }
 .PatGenerateReport{
     border-radius: 5px;
