--- a/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
+++ b/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
@@ -7,7 +7,7 @@
 
 #docdetsideimg{
     flex: 1;
-    padding: 8%;
+    padding: 10%;
     height: 80px;
     width: 80px;
 }
@@ -111,7 +111,8 @@
     border: none;
     -webkit-box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
     box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
-    width: 500px;
+    width: auto;
+    padding: auto;
 }
 .GenerateReport{
     border-radius: 5px;
