--- a/Frontend/my-app/src/Components/Form/UploadImage.css
+++ b/Frontend/my-app/src/Components/Form/UploadImage.css
@@ -131,9 +131,7 @@
 }
 
 .case-id-input {
-  width: auto;
+  width: 100%;
   padding: 10px;
   text-align: center;
-  margin-right: 40px;
-  margin-left: 40px;
 }
