--- a/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
+++ b/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
@@ -110,7 +110,7 @@
 
 .card-sub {
     cursor: pointer;
-    border: none;
+    border: black dotted 1px;
     -webkit-box-shadow: 0 0 1px 2px rgba(27, 26, 26, 0.05), 0 -2px 1px -2px rgba(22, 21, 21, 0.04), 0 0 0 -1px rgba(32, 31, 31, 0.05);
     box-shadow: 5px 5px 5px 5px rgba(31, 31, 31, 0.05), 0 -2px 1px -2px rgba(32, 32, 32, 0.04), 0 0 0 -1px rgba(22, 22, 22, 0.05);
     width: auto;
