--- a/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
+++ b/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
@@ -1,11 +1,11 @@
-.Doc-chat-hor{
+.Radio-chat-hor{
     display: flex;
-    background-color: rgb(7, 110, 101);
+    background-color: rgb(14, 14, 98);
     flex-direction: row;
     overflow-y: scroll;
 }
 
-#docchatsideimg{
+#radiochatsideimg{
     flex: 1;
     padding: 10%;
     height: 80px;
@@ -13,7 +13,7 @@
     margin-left: 15px;
 }
 
-.DocchatLogout
+.RadiochatLogout
 {
     flex:1;
     text-align: right;
@@ -22,7 +22,7 @@
     position: relative;
 
 }
-.doc-input-icon1{
+.radio-input-icon1{
    cursor: pointer;
 }
 
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
 }
-.screenshot
+.radio-screenshot
 {
     margin-top: 10%;
     margin-left: 40%;
@@ -55,7 +55,7 @@
     font-size: 16px;
     cursor: pointer;
     border-radius: 4px;
-    background-color: #066E65;
+    background-color: rgb(14, 14, 98);
     height: 40px;
 }
 
@@ -68,17 +68,14 @@
     margin-top: 5px;
 }
 
-.chat-container {
+.radio-chat-container {
     border: 4px solid #ccc;
     padding: 10px;
     border-radius: 10px;
     width: 650px;
-    border-color:rgb(7, 110, 101) ;
-    /* Adjust according to your design */
+    border-color:rgb(14, 14, 98) ;
     height: 600px;
-    /* Set a fixed height for the chat container */
     overflow-y: auto;
-    /* Make the chat container scrollable */
 }
 
 .chat-list {
@@ -88,7 +85,7 @@
 }
 
 .chat-item {
-    background-color: #cff4c2;
+    background-color: rgb(223, 209, 188);
     padding: 10px;
     margin: 20px;
     border-radius: 5px;
@@ -108,7 +105,7 @@
     
 }
 
-.inputWithButton{
+.radio-inputWithButton{
   margin-top: 2%;;
   display:flex;
   flex-direction:row;
@@ -121,27 +118,22 @@
 
 
 input {
-    /* Tell the input to use all the available space */
     flex:2;
-    /* And hide the input's outline, so the form looks like the outline */
     border:none;
   }
   
-  /* remove the input focus blue box, it will be in the wrong place. */
-  input:focus {
+input:focus {
     outline: none;
   }
-  
-  /* Add the focus effect to the form so it contains the button */
-  form:focus-within { 
+
+form:focus-within { 
     outline: 1px solid blue 
   }
   
-  .button {
-    /* Just a little styling to make it pretty */
+  .radio-button {
     size: 2px;
-    border:1px solid #066E65;
-    background:#066E65;
+    border:1px solid rgb(14, 14, 98);
+    background:rgb(14, 14, 98);
     color:white;
     height: auto;
     width:auto;
@@ -154,12 +146,12 @@ input {
     display: none;
    
  }
- .custom-file-upload{
+ .radio-custom-file-upload{
     padding: 10px 12px;
     cursor: pointer;
     size: 2px;
-    border:1px solid #066E65;
-    background:#066E65;
+    border:1px solid rgb(14, 14, 98);
+    background:rgb(14, 14, 98);
     color:white;
     height: auto;
     width:auto;
@@ -168,41 +160,32 @@ input {
  }
 
 .userNameVal {
-    color: blue;
+    color: black;
+    font-weight: bold;
 }
 
-/* Hide scrollbar */
 ::-webkit-scrollbar {
     width: 8px;
-    /* Width of the scrollbar */
     background-color: transparent;
-    /* Background color of the scrollbar area */
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #ccc;
-    /* Color of the scrollbar handle */
     border-radius: 4px;
-    /* Rounded corners */
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
     background: transparent;
-    /* Color of the scrollbar track */
 }
 
-.DoctorChat-about-us-section { 
+.RadioChat-about-us-section { 
     margin-top: 20px;
     height: auto;
     padding: 10px;
-    background-color: rgb(7,110,101);
+    background-color: rgb(14, 14, 98);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     color: white;
