--- a/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
+++ b/Frontend/my-app/src/Components/Patient/Details/PatientDetails.css
@@ -123,7 +123,7 @@
     background-color: #fcf6f6;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
     z-index: 1;
-    transform: translateY(-13%);
+    /* transform: translateY(-13%); */
     border-radius: 5px;
 
 }
