--- a/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
+++ b/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
@@ -1,55 +1,77 @@
 
-/* To be included before every new file */
 .Doctor-landing-hor{
     display: flex;
-    background-color: rgb(7,110,101);
-    flex-direction: row;
+    background-color: rgb(7, 110, 101);
     justify-content: space-between;
-    align-items: center;
-    padding: 8px;
-    overflow-x: hidden;
-    width:100%;
+    flex-direction: row;
+    overflow-y: hidden;
 }
 
-#docsideimg{
-    padding-top: 1%;
-    padding-left: 1%;
-    margin-left: 10px;
-    height: 120px;
-    width: 120px;
+#doclandsideimg{
+   
+    flex: 1;
+    padding: 10%;
+    height: 80px;
+    width: 80px;
+    margin-left: 15px;
 }
 
+.DoctorLandingSearch
+{
+  flex:1;
+  padding-top: 0.5%;
+  padding-left: 30%;
+}
 .DoctorSearch
 {
-    height: 30px;
-    width: 100vh;
-    border-radius:50px;
-    border-width: 3px;
-    border-color: rgb(242, 247, 246);
-    margin-top: 20px;
-    padding-left: 10px;  /*to give space in search bar*/
-    padding-right: 10px;  /*to give space in search bar*/
+    height: 28px;
+    border-radius:5px;
 }
 
-.input-icon2
+.DoctorSearch[type=text]
 {
-   margin-left: 250px;
-   margin-top: 20px;
-   cursor: pointer;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 20px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+.DoctorSearch[type=text]:focus
+{
+  border: 3px solid #ccc;
+}
+
+.DoctorLandingLogout
+{
+    flex:1;
+    text-align: right;
+    margin: 0 auto;
+    padding: 25px;
+    position: relative;
+}
+
+.input-doc-land-icon2
+{
+  cursor: pointer;
 }
 
 /* ------------------------------------------------------ */
 .Doctor-Land-ver {
     display: flex;
     flex-direction: row;
-    background-color: white;
-    margin-bottom:15px;
+    background-image: url('../../../Resources/doc-landing-background-2.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center; 
 }
 .Doctor-Land-ver1 {
     width: 100px;
     flex:0.4;
     height: 100vh;
-    background:rgb(7,110,101) ;
     margin-top: 10px;
     margin-left: 6px;
     margin-right: 30px;
@@ -57,6 +79,16 @@
     display: flex;
     flex-direction: column;
 }
+.doc-landing-button{
+  border-radius: 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: white;
+    border: rgb(7,110,101) solid 6px;
+    background-color: rgb(7,110,101);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 
 .Doctor-Land-ver2 {
    margin-top: 10px;
@@ -88,11 +120,11 @@
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
-    box-shadow: inset 0 0 0 2px rgb(7,110,101);
   }
  
   .Doctor-landing-about-us-section { 
-    padding: 20px;
+    height: auto;
+    padding: 10px;
     background-color: rgb(7,110,101);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
