--- a/Frontend/my-app/src/Components/Doctor/DoctorProfile/DoctorProfile.css
+++ b/Frontend/my-app/src/Components/Doctor/DoctorProfile/DoctorProfile.css
@@ -1,17 +1,11 @@
-body {
-    margin: 0; 
-    padding: 0; 
-    /* background-image: url("../../../Resources/beige\ background.avif");  */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-  .Doctor-Login-hor{
+.Doctor-profile-hor{
     display: flex;
-    background-color: #066E65;
-    overflow: hidden;
+    background-color: rgb(7, 110, 101);
+    justify-content: space-between;
+    flex-direction: row;
+    overflow-y: hidden;
   }
-  .divisions1
+  .doctorprofiledivisions1
   {
     display: flex;
     justify-content: center;
@@ -19,19 +13,15 @@ body {
     padding-left: 10%;
   }  
   
-  #profilesideimg{
-    padding-top: 1%;
-    padding-left: 10%;
-    height: 120px;
-    width: 120px;
+  #doctorprofilesideimg{
+    flex: 1;
+    padding: 10%;
+    height: 80px;
+    width: 80px;
+    margin-left: 15px;
   }
   
-  
-  .pageTitle {
-    color: white;
-    text-align: start;
-    
-  }
+ 
   
   
   
@@ -44,13 +34,12 @@ body {
     margin-right: 200px;
     margin-top: 50px;
     margin-bottom: 50px;
-    background-color: #ede7cd;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     display: flex;
     align-items: center;
-    
+    background-image: url('../../../Resources/doc-landing-background-1.webp');
   }
   
   .Doctor-picture {
@@ -67,13 +56,13 @@ body {
     margin: 60px 0px 20px 80px;
   }
   
-  .Doctor-user-info h2 {
+  .doctormainprofile h2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300px;
     color: #066E65;
   }
   
-  .Doctor-user-info p {
+  .doctormainprofile p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500px;
     color: #066E65;
