--- a/Frontend/my-app/src/Components/Patient/Registration/RegPatient.css
+++ b/Frontend/my-app/src/Components/Patient/Registration/RegPatient.css
@@ -3,26 +3,27 @@
     display: flex;
     background-color: rgb(21, 136, 194);
 }
-.divisions1
+.divisions1PR
 {
     display: flex;
+    flex: 1;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    padding-left: 10%;
 }  
   
-#radseideimg{
-    padding-top: 1%;
-    padding-left: 10%;
+#patRseideimg{
+    padding: 10%;
     height: 120px;
     width: 120px;
+    cursor: pointer;
 }
   
   
-.pageTitle {
-    color: rgb(252, 252, 252);
-    margin-left: 200px;
-    margin-top: 35px;
+.pageTitlePR {
+    color: white;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 /* ------------------------------------------------------ */
@@ -31,8 +32,6 @@
 
 .Patient-Login-Ver{
     display: flex;
-    background-color: #ffff00;
-    height: 580px;
 }
   
 .Patient-Login-Ver-Left{
@@ -54,14 +53,13 @@
   
 .login-container {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+    width: auto;
     justify-content: center;
     align-self: center;
     text-align: center;
-    margin-bottom: 20%;
     
 }
   
@@ -71,10 +69,10 @@
     padding-bottom: 30%;
 }
   
-.login-form {
+.login-formPR {
     display: flex;
     flex-direction: column;
-    padding-bottom: 0%;
+    padding: 10px;
 }
   
 .form-group {
@@ -111,7 +109,6 @@
     font-size: 16px;
     width: 100%;
     margin-top: 10px;
-    transition: background-color 0.3s ease;
 }
 
 #login_patient:hover{
@@ -119,10 +116,9 @@
 }
   
 
-#radiomainimg{
-    padding-left: 10%;
-    height: 550px;
-    width:100%
+#patRmainimg{
+    padding-left: 5%;
+    height:500px;
 }
 
 .input-icon {
