--- a/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
+++ b/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
@@ -117,18 +117,18 @@
 }
 
 
-input {
+.radinput {
     flex:2;
     border:none;
   }
   
-input:focus {
+.radinput:focus {
     outline: none;
   }
 
-form:focus-within { 
+/* form:focus-within { 
     outline: 1px solid blue 
-  }
+  } */
   
   .radio-button {
     size: 2px;
@@ -141,7 +141,7 @@ form:focus-within {
     border-radius: 5px;
   }
 
- input[type="file"]
+input[type="file"]
  {
     display: none;
    
