--- a/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
+++ b/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
@@ -59,6 +59,21 @@
     height: 40px;
 }
 
+.submit-button{
+    margin-left: 40%;
+    margin-right: 40%;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: rgb(14, 14, 98);
+    height: 40px;
+}
+
 .chat-wrapper {
     flex: 1;
     display: flex;
