--- a/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
+++ b/Frontend/my-app/src/Components/Radiologist/RadioChat/RadioChat.css
@@ -44,9 +44,10 @@
 }
 .radio-screenshot
 {
-    margin-top: 10%;
-    margin-left: 40%;
+    margin-top: 5%;
+    margin-left: 30%;
     margin-right: 40%;
+    margin-bottom: 5%;
     border: none;
     color: white;
     text-align: center;
