--- a/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
+++ b/Frontend/my-app/src/Components/Doctor/DoctorLanding/DoctorLanding.css
@@ -63,10 +63,25 @@
 .Doctor-Land-ver {
     display: flex;
     flex-direction: row;
-    background-image: url('../../../Resources/doc-landing-background-2.webp');
-    background-repeat: no-repeat;
+    background-image: url('../../../Resources/doc-land.jpg');
+    background-repeat: no-repeat; 
     background-size: cover;
     background-position: center center; 
+}
+.Doctor-Land-ver::before {
+  content: "";
+  position: absolute;
+  top: 80px;  
+  left: 0;
+  width: 100%;
+  height: calc(100% - -15px);  
+  background-color: rgba(0, 0, 0, 0.4);  
+  z-index: 1;  
+}
+
+.Doctor-Land-ver > * {
+  position: relative;
+  z-index: 2;
 }
 .Doctor-Land-ver1 {
     width: 100px;
@@ -84,9 +99,14 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     color: white;
-    border: rgb(7,110,101) solid 6px;
+    border: rgb(241, 247, 247) solid 3px;
+    height: 40px;
     background-color: rgb(7,110,101);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); /* Shadow for depth */
+
+    /* Gradient for 3D effect */
+    background-image: linear-gradient(45deg, rgb(7,110,101) 0%, rgb(64, 227, 214) 100%);
 }
 
 
@@ -120,8 +140,9 @@
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
+    flex-direction: column;
   }
- 
+
   .Doctor-landing-about-us-section { 
     height: auto;
     padding: 10px;
