--- a/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
+++ b/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
@@ -3,67 +3,117 @@
 .Radio-landing-hor{
     display: flex;
     background-color: rgb(14, 14, 98);
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding: 8px;
-    overflow-x: hidden;
-    width:100%;
-    
-    
+    flex-direction: row;
+    overflow-y: hidden;
+  }
+
+#radlandsideimg{
+  flex: 1;
+  padding: 10%;
+  height: 80px;
+  width: 80px;
+  margin-left: 15px;
 }
 
-#docsideimg{
-    padding-top: 1%;
-    padding-left: 1%;
-    margin-left: 10px;
-    height: 120px;
-    width: 120px;
+.RadioLandingSearch
+{
+  flex:1;
+  padding-top: 0.5%;
+  padding-left: 30%;
 }
-
 .RadioSearch
 {
-    height: 30px;
-    width: 100vh;
-    border-radius:50px;
-    border-width: 3px;
-    border-color: rgb(242, 247, 246);
-    margin-top: 20px;
-    padding-left: 10px;  /*to give space in search bar*/
-    padding-right: 10px;  /*to give space in search bar*/
+    height: 28px;
+    border-radius:5px;
+}
+.RadioSearch[type=text]
+{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 20px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
 }
 
-.input-icon1
+.RadioSearch[type=text]:focus
 {
-   margin-left: 250px;
-   margin-top: 20px;
+  border: 3px solid #ccc;
 }
+.RadioLandingLogout
+{
+    flex:1;
+    text-align: right;
+    margin: 0 auto;
+    padding: 25px;
+    position: relative;
+}
+
+.input-rad-land-icon2
+{
+  cursor: pointer;
+}
+
 
 /* ------------------------------------------------------ */
 .Radio-Land-ver {
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    margin-bottom:15px;
+  display: flex;
+  flex-direction: row;
+  background-image: url('../../../Resources/doc-land.jpg');
+  background-repeat: no-repeat; 
+  background-size: cover;
+  background-position: center center; 
+}
+.Radio-Land-ver::before {
+  content: "";
+  position: absolute;
+  top: 80px;  
+  left: 0;
+  width: 100%;
+  height: calc(100% - -15px);  
+  background-color: rgba(0, 0, 0, 0.4);  
+  z-index: 1;  
+}
+
+.Radio-Land-ver > * {
+  position: relative;
+  z-index: 2;
 }
 .Radio-Land-ver1 {
-    width: 100px;
-    flex:0.4;
-    height: 100vh;
-    background:#0E0F62 ;
-    margin-top: 10px;
-    margin-left: 6px;
-    margin-right: 30px;
-    margin-bottom: 2px;
-    display: flex;
-    flex-direction: column;
+  width: 100px;
+  flex:0.4;
+  height: 100vh;
+  margin-top: 10px;
+  margin-left: 6px;
+  margin-right: 30px;
+  margin-bottom: 2px;
+  display: flex;
+  flex-direction: column;
+}
+
+.radio-landing-button{
+  border-radius: 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: white;
+    border: rgb(241, 247, 247) solid 3px;
+    height: 40px;
+    background-color: rgb(14, 14, 98);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); /* Shadow for depth */
+
+    /* Gradient for 3D effect */
+    background-image: linear-gradient(45deg, rgb(14, 14, 98) 0%, rgb(55, 55, 145) 100%);
 }
 
 .Radio-Land-ver2 {
-   margin-top: 10px;
-   flex:2;
-   height: 100vh;
-   overflow-y: scroll;
+  margin-top: 10px;
+  flex:2;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 /* custom scrollbar */
@@ -86,14 +136,15 @@
     background-color: #a8bbbf;
   }
  .RadioLandingcard{
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-align: center;
-    box-shadow: inset 0 0 0 2px #0E0F62;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+  flex-direction: column;
   }
  
   .radio-landing-about-us-section { 
-    padding: 20px;
+    height: auto;
+    padding: 10px;
     background-color: #0E0F62;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
