--- a/Frontend/my-app/src/Components/Patient/PatientProfile/PatientProfile.css
+++ b/Frontend/my-app/src/Components/Patient/PatientProfile/PatientProfile.css
@@ -1,36 +1,17 @@
-body {
-    margin: 0; 
-    padding: 0; 
-    /* background-image: url("../../../Resources/beige\ background.avif");  */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-  .Patient-Login-hor{
+.Patient-profile-hor{
     display: flex;
     background-color: #1588C1;
-    overflow: hidden;
-  }
-  .divisions1
-  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 10%;
-  }  
-  
-  #profilesideimg{
-    padding-top: 1%;
-    padding-left: 10%;
-    height: 120px;
-    width: 120px;
+    justify-content: space-between;
+    flex-direction: row;
+    overflow-y: hidden;
   }
   
-  
-  .pageTitle {
-    color: white;
-    text-align: start;
-    
+  #Patientprofilesideimg{
+    flex: 1;
+    padding: 10%;
+    height: 80px;
+    width: 80px;
+    margin-left: 15px;
   }
   
   
@@ -44,12 +25,12 @@ body {
     margin-right: 200px;
     margin-top: 50px;
     margin-bottom: 50px;
-    background-color: #edc7c71b;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     display: flex;
     align-items: center;
+    background-image: url('../../../Resources/patient-profile1.avif');
     
   }
   
@@ -67,29 +48,16 @@ body {
     margin: 60px 0px 20px 80px;
   }
   
-  .Patient-container h2 {
+  .patientmainprofile h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300px;
     color: #1588C1;
   }
   
-  .Patient-container p {
+  .patientmainprofile p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500px;
     color: #1588C1;
-  }
-  .Patient-edit-button {
-    margin-top: 6px; 
-    margin-left: 80px;
-    color:white;
-    background-color: #1588C1;
-    padding: 6px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: 300;
-    
   }
   
   .Patient-change-button {
@@ -107,8 +75,8 @@ body {
   
   
   .Patient-about-us-section {
-    margin-top: 20px; 
-    padding: 20px;
+    height: auto;
+    padding: 10px;
     background-color: #1588C1;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -116,8 +84,4 @@ body {
     font-weight: bold;
   }
   
-  .Patient-about-us-section p {
-    font-size: 16px;
-    line-height: 1;
-    margin-bottom: 10px;
-  }
+ 
