--- a/Frontend/my-app/src/Components/Admin/AdminLanding/AdminLanding.css
+++ b/Frontend/my-app/src/Components/Admin/AdminLanding/AdminLanding.css
@@ -2,60 +2,108 @@
 /* To be included before every new file */
 .Admin-landing-hor{
     display: flex;
-    background-color: rgb(82,209,188);
-    flex-direction: row;
+    background-color: rgb(72, 111, 105);
     justify-content: space-between;
-    align-items: center;
-    padding: 8px;
-    overflow-x: hidden;
-    width:100%;
+    flex-direction: row;
+    overflow-y: hidden;
 }
 
-#docsideimg{
-    padding-top: 1%;
-    padding-left: 1%;
-    margin-left: 10px;
-    height: 120px;
-    width: 120px;
+#adminlandimg{
+  flex: 1;
+  padding: 10%;
+  height: 80px;
+  width: 80px;
+  margin-left: 15px;
 }
-
+.AdminLandingSearch
+{
+  flex:1;
+  padding-top: 0.5%;
+  padding-left: 30%;
+}
 .AdminSearch
 {
-    height: 30px;
-    width: 100vh;
-    border-radius:50px;
-    border-width: 3px;
-    border-color: rgb(242, 247, 246);
-    margin-top: 20px;
-    padding-left: 10px;  /*to give space in search bar*/
-    padding-right: 10px;  /*to give space in search bar*/
+  height: 28px;
+  border-radius:5px;
 }
 
-.input-icon2
+.AdminSearch[type=text]
 {
-   margin-left: 250px;
-   margin-top: 20px;
-   
+  width: 100%;
+  padding: 12px 20px;
+  margin: 20px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
 }
 
+.AdminSearch[type=text]:focus
+{
+  border: 3px solid #ccc;
+}
+.AdminLandingLogout
+{
+    flex:1;
+    text-align: right;
+    margin: 0 auto;
+    padding: 25px;
+    position: relative;
+}
+
+.admin-land-input-icon2
+{
+  cursor: pointer;
+}
 /* ------------------------------------------------------ */
 .Admin-Land-ver {
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    margin-bottom:15px;
+  display: flex;
+  flex-direction: row;
+  background-image: url('../../../Resources/admin-page.jpg');
+  background-repeat: no-repeat; 
+  background-size: cover;
+  background-position: center center; 
+}
+.Admin-Land-ver::before {
+  content: "";
+  position: absolute;
+  top: 80px;  
+  left: 0;
+  width: 100%;
+  height: calc(100% - -15px);  
+  background-color: rgba(0, 0, 0, 0.4);  
+  z-index: 1;  
+}
+
+.Admin-Land-ver > * {
+  position: relative;
+  z-index: 2;
 }
 .Admin-Land-ver1 {
-    width: 100px;
-    flex:0.4;
-    height: 100vh;
-    background:rgb(82,209,188) ;
-    margin-top: 10px;
-    margin-left: 6px;
-    margin-right: 30px;
-    margin-bottom: 2px;
-    display: flex;
-    flex-direction: column;
+  width: 100px;
+  flex:0.4;
+  height: 100vh;
+  margin-top: 10px;
+  margin-left: 6px;
+  margin-right: 30px;
+  margin-bottom: 2px;
+  display: flex;
+  flex-direction: column;
+}
+.admin-landing-button{
+  border-radius: 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: white;
+    border: rgb(241, 247, 247) solid 3px;
+    height: 40px;
+    background-color: rgb(82,209,188);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); /* Shadow for depth */
+
+    /* Gradient for 3D effect */
+    background-image: linear-gradient(45deg, rgb(82,209,188) 0%, rgb(13, 14, 13)100%);
 }
 
 .Admin-Land-ver2 {
@@ -88,12 +136,14 @@
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
-    box-shadow: inset 0 0 0 2px rgb(82,209,188);
+    flex-direction: column;
   }
  
   .Admin-landing-about-us-section { 
-    padding: 20px;
-    background-color: rgb(82,209,188);
+    
+    height: auto;
+    padding: 10px;
+    background-color: rgb(72, 111, 105);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     color: white;
