--- a/Frontend/my-app/src/Components/Doctor/DoctorProfile/DoctorProfile.css
+++ b/Frontend/my-app/src/Components/Doctor/DoctorProfile/DoctorProfile.css
@@ -25,7 +25,7 @@
     margin-left: 200px;
     margin-right: 200px;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -74,7 +74,7 @@
   }
   
   
-  .Doctor-about-us-section {
+  .Doctor-prof-about-us-section {
     height: auto;
     padding: 10px;
     background-color: #066E65;
