--- a/Frontend/my-app/src/Components/Radiologist/Login/Radio.css
+++ b/Frontend/my-app/src/Components/Radiologist/Login/Radio.css
@@ -104,12 +104,17 @@
     font-size: 16px;
     width: 100%;
     margin-top: 10px;
+    
 }
   
 #login_radio:hover {
     background-color:rgb(88, 175, 197);
 }
 #radiologimg{
+   
+
+
+    padding-left: 10%;
     height: auto;
     width:100%;
 }
